@@ -23,6 +23,7 @@ import java.util.stream.Collectors;
 import static org.civworld.brainrots.util.Utils.*;
 
 public class Puller {
+
     private final Plugin plugin;
     private final BrainrotRepo brainrotRepo;
     private final LobbyRepo lobbyRepo;
@@ -30,12 +31,26 @@ public class Puller {
     private BukkitRunnable mainTask = null;
     private boolean warnedNoBrainrots = false;
     private boolean warnedNoLobbies = false;
-    @Getter private HashMap<NPC, BrainrotModel> walkingNpc = new HashMap<>();
+
+    @Getter
+    private final Map<NPC, BrainrotModel> walkingNpc = new HashMap<>();
+
+    private final Map<Integer, BrainrotModel> forcedNext = new HashMap<>();
 
     public Puller(Plugin plugin, BrainrotRepo brainrotRepo, LobbyRepo lobbyRepo) {
         this.plugin = plugin;
         this.brainrotRepo = brainrotRepo;
         this.lobbyRepo = lobbyRepo;
+    }
+
+    public void forceNext(int lobby, BrainrotModel brainrotModel) {
+        forcedNext.put(lobby, brainrotModel);
+    }
+
+    public void forceNextAll(BrainrotModel brainrotModel) {
+        for (Lobby lb : lobbyRepo.getLobbies()) {
+            forcedNext.put(lb.getNum(), brainrotModel);
+        }
     }
 
     public void startPull() {
@@ -56,18 +71,18 @@ public class Puller {
                 CommandSender console = Bukkit.getConsoleSender();
 
                 for (Lobby lobby : lobbyRepo.getLobbies()) {
-                    BrainrotModel brainrot = getRandomBrainrot();
-                    if (brainrot == null) return;
+                    BrainrotModel model = forcedNext.remove(lobby.getNum());
+
+                    if (model == null) {
+                        model = getRandomBrainrot();
+                    }
 
                     Location start = lobby.getTeleportLoc().clone();
                     Location end = start.clone().add(145, 0, 0);
 
                     String uuid = UUID.randomUUID().toString();
-
                     NPC npc = CitizensAPI.getNPCRegistry().createNPC(EntityType.PLAYER, uuid);
-
                     npc.setName("");
-
                     npc.spawn(start);
 
                     npc.setUseMinecraftAI(false);
@@ -76,7 +91,6 @@ public class Puller {
                             .stuckAction(null)
                             .distanceMargin(1.0)
                             .useNewPathfinder(true);
-
                     npc.getNavigator().getDefaultParameters().range(200f);
 
                     LookClose look = npc.getOrAddTrait(LookClose.class);
@@ -85,21 +99,25 @@ public class Puller {
                     Bukkit.dispatchCommand(console, "npc select " + npc.getId());
                     Bukkit.dispatchCommand(console, "trait add meg_model");
                     Bukkit.dispatchCommand(console,
-                            "meg npc model citizens:" + npc.getId() + ":[" + uuid + "] add " + brainrot.getId().toLowerCase());
+                            "meg npc model citizens:" + npc.getId() + ":[" + uuid + "] add " + model.getId().toLowerCase());
 
                     Bukkit.dispatchCommand(console, "npc hologram lineheight 0.25");
-                    Bukkit.dispatchCommand(console, "npc hitbox --width " + brainrot.getWidthHitbox() + " --height " + brainrot.getHeightHitbox());
-                    Bukkit.dispatchCommand(console, "npc hologram add &a$" + formatNumber(brainrot.getCost()));
-                    Bukkit.dispatchCommand(console, "npc hologram marginbottom 0 " + brainrot.getMarginHologram());
-                    Bukkit.dispatchCommand(console, "npc hologram add &e$" + formatNumber(brainrot.getEarn()) + "/с");
-                    if(brainrot.getRarity().equals(Rarity.BRAINROT_GOD)){
-                        Bukkit.dispatchCommand(console, "npc hologram add &#FF0000B&#FF4000r&#FF7F00a&#FFBF00i&#FFFF00n&#80FF00r&#00FF00o&#0000FFt &#4A00E9G&#6F00DEo&#9400D3d");
-                    } else {
-                        Bukkit.dispatchCommand(console, "npc hologram add &f" + colorFromRarity(brainrot.getRarity()) + capitalizeFirst(brainrot.getRarity().toString()));
-                    }
-                    Bukkit.dispatchCommand(console, "npc hologram add &f" + capitalizeFirst(brainrot.getDisplayName()));
+                    Bukkit.dispatchCommand(console, "npc hitbox --width " + model.getWidthHitbox() + " --height " + model.getHeightHitbox());
+                    Bukkit.dispatchCommand(console, "npc hologram add &a$" + formatNumber(model.getCost()));
+                    Bukkit.dispatchCommand(console, "npc hologram marginbottom 0 " + model.getMarginHologram());
+                    Bukkit.dispatchCommand(console, "npc hologram add &e$" + formatNumber(model.getEarn()) + "/с");
 
-                    walkingNpc.put(npc, brainrot);
+                    if (model.getRarity().equals(Rarity.BRAINROT_GOD)) {
+                        Bukkit.dispatchCommand(console,
+                                "npc hologram add &#FF0000B&#FF4000r&#FF7F00a&#FFBF00i&#FFFF00n&#80FF00r&#00FF00o&#0000FFt &#4A00E9G&#6F00DEo&#9400D3d");
+                    } else {
+                        Bukkit.dispatchCommand(console,
+                                "npc hologram add &f" + colorFromRarity(model.getRarity()) + capitalizeFirst(model.getRarity().toString()));
+                    }
+
+                    Bukkit.dispatchCommand(console, "npc hologram add &f" + capitalizeFirst(model.getDisplayName()));
+
+                    walkingNpc.put(npc, model);
 
                     npc.getNavigator().setTarget(end);
 
@@ -107,26 +125,24 @@ public class Puller {
                         @Override
                         public void run() {
                             if (!npc.isSpawned()) {
+                                walkingNpc.remove(npc);
                                 cancel();
                                 return;
                             }
 
-                            Location npcLoc = npc.getStoredLocation();
-                            double distanceToEnd = npcLoc.distance(end);
-
-                            if (distanceToEnd <= 2.0 || !npc.getNavigator().isNavigating()) {
+                            if (!npc.getNavigator().isNavigating() || npc.getStoredLocation().distance(end) <= 2.0) {
                                 npc.despawn(DespawnReason.REMOVAL);
                                 npc.destroy();
-                                walkingNpc.remove(npc, brainrot);
+                                walkingNpc.remove(npc);
                                 cancel();
                             }
                         }
-                    }.runTaskTimer(plugin, 10L, 10L);
+                    }.runTaskTimer(plugin, 10, 10);
                 }
             }
         };
 
-        mainTask.runTaskTimer(plugin, 0L, 20L * 3);
+        mainTask.runTaskTimer(plugin, 0, 60);
     }
 
     public void stopPull() {
@@ -135,11 +151,10 @@ public class Puller {
             mainTask = null;
         }
 
-        for(NPC npc : walkingNpc.keySet()){
+        for (NPC npc : walkingNpc.keySet()) {
             npc.despawn();
             npc.destroy();
         }
-
         walkingNpc.clear();
     }
 
@@ -147,7 +162,7 @@ public class Puller {
         var list = brainrotRepo.getBrainrots().stream().toList();
         if (list.isEmpty()) {
             if (!warnedNoBrainrots) {
-                plugin.getLogger().warning("Бреинроты не настроены! Пожалуйста, создайте через /bt");
+                plugin.getLogger().warning("Бреинроты не настроены! Создайте через /bt");
                 warnedNoBrainrots = true;
             }
             return null;
@@ -158,26 +173,23 @@ public class Puller {
                 .collect(Collectors.groupingBy(BrainrotModel::getRarity));
 
         double totalWeight = byRarity.values().stream()
-                .mapToDouble(l -> l.get(0).getRarity().getValue())
+                .mapToDouble(l -> l.getFirst().getRarity().getValue())
                 .sum();
 
         double roll = Math.random() * totalWeight;
         double cum = 0;
         Rarity chosenRarity = null;
+
         for (var entry : byRarity.entrySet()) {
-            cum += entry.getValue().get(0).getRarity().getValue();
+            cum += entry.getValue().getFirst().getRarity().getValue();
             if (roll <= cum) {
                 chosenRarity = entry.getKey();
                 break;
             }
         }
 
-        // На всякий случай, если что-то пошло не так
-        if (chosenRarity == null) {
-            chosenRarity = list.get(0).getRarity();
-        }
+        if (chosenRarity == null) chosenRarity = list.getFirst().getRarity();
 
-        // 4️⃣ Случайный Brainrot из выбранной редкости
         List<BrainrotModel> options = byRarity.get(chosenRarity);
         return options.get(new Random().nextInt(options.size()));
     }
